<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name" translatable="false">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_notification">Notification</string>
    <string name="action_map_location">Map Location</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_units_label">Temperature</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_default" translatable="false">@string/pref_units_metric</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>

    <string name="pref_notification_label">Notification</string>
    <string name="pref_notification_key" translatable="false">notification</string>
    <string name="pref_notification_summary_on">Enabled</string>
    <string name="pref_notification_summary_off">Disabled</string>
    <string name="pref_notification_default" translatable="false">true</string>

    <string name="today" description="Date label when displaying today's weather forecast [CHAR LIMIT=20]">Today</string>
    <string name="tomorrow" description="Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20]">Tomorrow</string>

    <string name="format_full_friendly_date" description="Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20]" translatable="false">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>


    <!-- Strings for formatting weather-related data -->
    <string name="format_temperature" description="Temperature format [CHAR LIMIT=5]" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Windspeed formats -->
    <string name="format_wind_mph" description="Wind in mph [CHAR LIMIT=25]">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_wind_kmh" description="Wind in kph [CHAR LIMIT=25]">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_pressure" description="Pressure format CHAR LIMIT=25]">
        Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

    <string name="format_humidity" description="Humidity format CHAR LIMIT=25]">
        Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>

    <string name="font_light" translatable="false">sans-serif-light</string>
    <string name="font_condensed" translatable="false">sans-serif-condensed</string>

    <string name="sync_account_type" translatable="false">sunshine.clangpp.com</string>
    <string name="content_authority" translatable="false">com.clangpp.sunshine</string>

<string name="format_notification" description="Notification Format">
Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification" translatable="false">last_notification</string>

</resources>
