<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

    <CheckBoxPreference
        android:defaultValue="@string/pref_notification_default"
        android:key="@string/pref_notification_key"
        android:summaryOff="@string/pref_notification_summary_off"
        android:summaryOn="@string/pref_notification_summary_on"
        android:title="@string/pref_notification_label" />

</PreferenceScreen>